@@ -114,6 +114,8 @@ Code refactoring
 
 * Use Semaphore::Locker everywhere (instead of explicit
   Release() and Acquire())
+* Avoid direct calls to FromDcmtkBridge, go through ParsedDicomFile
+  wherever possible
 
 
 =================
